styles on mobile fixed

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,4 @@
-.flex-row {
+.row {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -87,6 +87,7 @@
 @media (max-width: 600px) {
   .title {
     padding: 0em;
+    padding-top: 1em;
   }
 
   .flex-row {
@@ -108,7 +109,7 @@
   }
 
   .button {
-    margin: 0em;
     margin-top: 1.25em;
+    margin-bottom: 1.25em;
   }
 }
